feat: created method findWithSchedules (#6)